school-template-template-1763005311585.yaml
---
Metadata:
  AWSToolsMetrics:
    IaC_Generator: "arn:aws:cloudformation:us-east-2:077369590526:generatedTemplate/73b91c41-cc45-4c5a-9287-4fc7e2bda866"
Resources:
  LogsLogStreamEcsschoolb472ab5afa1841a9944fafb93f7bdef9:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/b472ab5afa1841a9944fafb93f7bdef9"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2SecurityGroupPE:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "school sec all ports accepted"
      GroupName: "MySchoolSecGroup"
      VpcId:
        Ref: "EC2VPC"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 80
        ToPort: 80
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  IAMRoleAWSServiceRoleForElasticLoadBalancing:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Retain"
    Properties:
      Path: "/aws-service-role/elasticloadbalancing.amazonaws.com/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/aws-service-role/AWSElasticLoadBalancingServiceRolePolicy"
      MaxSessionDuration: 3600
      RoleName: "AWSServiceRoleForElasticLoadBalancing"
      Description: "Allows ELB to call AWS services on your behalf."
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "elasticloadbalancing.amazonaws.com"
  IAMRoleEcsTaskExecutionRole:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Retain"
    Properties:
      Path: "/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
      MaxSessionDuration: 3600
      RoleName: "ecsTaskExecutionRole"
      AssumeRolePolicyDocument:
        Version: "2008-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "ecs-tasks.amazonaws.com"
          Sid: ""
  EC2NetworkInterfaceAttachmentJM:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterfaceAttachment"
    DeletionPolicy: "Retain"
    Properties:
      NetworkInterfaceId: "eni-0997ac64c4dfa6e1f"
      DeviceIndex: "1"
      DeleteOnTermination: false
  EC2SubnetNetworkAclAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl"
      SubnetId:
        Ref: "EC2Subnet"
  ECRRepositoryRshankarkmyfirstrepo:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ECR::Repository"
    DeletionPolicy: "Retain"
    Properties:
      ImageScanningConfiguration:
        ScanOnPush: false
      RepositoryName: "rshankark/myfirstrepo"
      EncryptionConfiguration:
        EncryptionType: "AES256"
      Tags: []
      ImageTagMutability: "MUTABLE"
  XRayGroupGroupDefault:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::XRay::Group"
    DeletionPolicy: "Retain"
    Properties:
      GroupName: "Default"
      InsightsConfiguration:
        InsightsEnabled: false
        NotificationsEnabled: false
      Tags: []
  EC2SubnetSS:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: true
      EnableDns64: false
      VpcId:
        Ref: "EC2VPC"
      AvailabilityZoneId: "use2-az3"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "172.31.32.0/20"
      Ipv6Native: false
      Tags: []
  IAMUserRshankark:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::IAM::User"
    DeletionPolicy: "Retain"
    Properties:
      Path: "/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/AdministratorAccess"
      UserName: "rshankark"
      Tags:
      - Value: "for aws cmd"
        Key: "AKIAREA4WIL7J2OKI7VD"
  LogsLogStreamEcsschoola63f812c6cdc47f1a7e81c7d6999b653:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/a63f812c6cdc47f1a7e81c7d6999b653"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2DHCPOptions:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::DHCPOptions"
    DeletionPolicy: "Retain"
    Properties:
      DomainName: "us-east-2.compute.internal"
      DomainNameServers:
      - "AmazonProvidedDNS"
      Tags: []
  LogsLogStreamEcsschool97134b5cc7c343bbb9251e4be412828f:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/97134b5cc7c343bbb9251e4be412828f"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2SubnetNetworkAclAssociationMK:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl"
      SubnetId:
        Ref: "EC2SubnetSS"
  EC2Route:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId:
        Ref: "EC2InternetGateway"
      VpcEndpointId: "igw-0dc0cee80571a5fe4"
  IAMRoleAWSServiceRoleForTrustedAdvisor:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Retain"
    Properties:
      Path: "/aws-service-role/trustedadvisor.amazonaws.com/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/aws-service-role/AWSTrustedAdvisorServiceRolePolicy"
      MaxSessionDuration: 3600
      RoleName: "AWSServiceRoleForTrustedAdvisor"
      Description: "Access for the AWS Trusted Advisor Service to help reduce cost,\
        \ increase performance, and improve security of your AWS environment."
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "trustedadvisor.amazonaws.com"
  ElasticLoadBalancingV2LoadBalancerLoadbalancerappschoollbr8dfc0dd6d7560ac7:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      SecurityGroups:
      - "sg-073b3304ec2cf36be"
      LoadBalancerAttributes:
      - Value: ""
        Key: "access_logs.s3.prefix"
      - Value: "append"
        Key: "routing.http.xff_header_processing.mode"
      - Value: "true"
        Key: "routing.http2.enabled"
      - Value: "false"
        Key: "waf.fail_open.enabled"
      - Value: ""
        Key: "connection_logs.s3.bucket"
      - Value: "false"
        Key: "access_logs.s3.enabled"
      - Value: "false"
        Key: "zonal_shift.config.enabled"
      - Value: "defensive"
        Key: "routing.http.desync_mitigation_mode"
      - Value: ""
        Key: "connection_logs.s3.prefix"
      - Value: "false"
        Key: "routing.http.x_amzn_tls_version_and_cipher_suite.enabled"
      - Value: "false"
        Key: "routing.http.preserve_host_header.enabled"
      - Value: "true"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "routing.http.xff_client_port.enabled"
      - Value: ""
        Key: "access_logs.s3.bucket"
      - Value: "false"
        Key: "deletion_protection.enabled"
      - Value: "3600"
        Key: "client_keep_alive.seconds"
      - Value: "false"
        Key: "routing.http.drop_invalid_header_fields.enabled"
      - Value: "false"
        Key: "connection_logs.s3.enabled"
      - Value: "60"
        Key: "idle_timeout.timeout_seconds"
      Subnets:
      - Ref: "EC2SubnetK2"
      - Ref: "EC2Subnet"
      - Ref: "EC2SubnetSS"
      Type: "application"
      Scheme: "internet-facing"
      EnablePrefixForIpv6SourceNat: "off"
      EnforceSecurityGroupInboundRulesOnPrivateLinkTraffic: ""
      Tags: []
      Name: "school-lbr"
      SubnetMappings:
      - SubnetId:
          Ref: "EC2Subnet"
      - SubnetId:
          Ref: "EC2SubnetSS"
      - SubnetId:
          Ref: "EC2SubnetK2"
  LogsLogStreamEcsschoolbb5e3965dff94c84b202bd04f6c3fc8b:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/bb5e3965dff94c84b202bd04f6c3fc8b"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2NetworkInterfaceAttachment:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterfaceAttachment"
    DeletionPolicy: "Retain"
    Properties:
      NetworkInterfaceId: "eni-02ac6d9f5c2e38196"
      DeviceIndex: "1"
      DeleteOnTermination: false
  ECSClusterCapacityProviderAssociationsConsideratefoxh978sb:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ECS::ClusterCapacityProviderAssociations"
    DeletionPolicy: "Retain"
    Properties:
      CapacityProviders:
      - "FARGATE"
      - "FARGATE_SPOT"
      Cluster: "considerate-fox-h978sb"
      DefaultCapacityProviderStrategy: []
  LogsLogStreamEcsschool296a22592e7543f5bccc4d94cfedade9:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/296a22592e7543f5bccc4d94cfedade9"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2VPCDHCPOptionsAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC"
      DhcpOptionsId:
        Ref: "EC2DHCPOptions"
  LogsLogStreamEcsschool6182ab35a24f4d2f95389805db6db7ee:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/6182ab35a24f4d2f95389805db6db7ee"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2SubnetK2:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: true
      EnableDns64: false
      VpcId:
        Ref: "EC2VPC"
      AvailabilityZoneId: "use2-az2"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "172.31.16.0/20"
      Ipv6Native: false
      Tags: []
  EC2NetworkInterface:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: "arn:aws:ecs:us-east-2:077369590526:attachment/dbcd74b5-584e-41b6-b325-d4411f6d85f7"
      PrivateIpAddress: "172.31.36.41"
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-03b992ad11def2c58"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2SubnetSS"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
      PublicIpDnsNameOptions:
        DnsHostnameType: "public-ipv4-dns-name"
        PublicIpv4DnsName: "ec2-3-15-215-240.us-east-2.compute.amazonaws.com"
  EC2InternetGateway:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::InternetGateway"
    DeletionPolicy: "Retain"
    Properties:
      Tags: []
  EC2NetworkInterfaceXJ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: "ELB app/school-lbr/8dfc0dd6d7560ac7"
      PrivateIpAddress: "172.31.30.49"
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-073b3304ec2cf36be"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2SubnetK2"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
      PublicIpDnsNameOptions:
        DnsHostnameType: "public-ipv4-dns-name"
        PublicIpv4DnsName: "ec2-3-18-51-125.us-east-2.compute.amazonaws.com"
  LogsLogStreamEcsschoolf0b724f4e0944996a389d0789b7d858d:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/f0b724f4e0944996a389d0789b7d858d"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  LogsLogStreamEcsschoola1045d375b484b428016d44b558d497f:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/a1045d375b484b428016d44b558d497f"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2NetworkAcl:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkAcl"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC"
      Tags: []
  ElasticLoadBalancingV2ListenerListenerappschoollbr8dfc0dd6d7560ac75e3ea59ed87701c9:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      ListenerAttributes:
      - Value: "true"
        Key: "routing.http.response.server.enabled"
      - Value: ""
        Key: "routing.http.response.access_control_allow_headers.header_value"
      - Value: ""
        Key: "routing.http.response.x_frame_options.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_methods.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_origin.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_credentials.header_value"
      - Value: ""
        Key: "routing.http.response.x_content_type_options.header_value"
      - Value: ""
        Key: "routing.http.response.content_security_policy.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_expose_headers.header_value"
      - Value: ""
        Key: "routing.http.response.strict_transport_security.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_max_age.header_value"
      Protocol: "HTTP"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancerappschoollbr8dfc0dd6d7560ac7"
      DefaultActions:
      - Order: 1
        TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroupTargetgroupschooltargetgroupfdf5acc27a3e26d3"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
            DurationSeconds: 3600
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroupTargetgroupschooltargetgroupfdf5acc27a3e26d3"
            Weight: 1
      Port: 80
  Route53ResolverResolverRuleAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Route53Resolver::ResolverRuleAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VPCId:
        Ref: "EC2VPC"
      ResolverRuleId: "rslvr-autodefined-rr-internet-resolver"
      Name: "System Rule Association"
  ElastiCacheUser:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElastiCache::User"
    DeletionPolicy: "Retain"
    Properties:
      UserName: "default"
      UserId: "default"
      Engine: "redis"
      Tags: []
  EC2Subnet:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: true
      EnableDns64: false
      VpcId:
        Ref: "EC2VPC"
      AvailabilityZoneId: "use2-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: "172.31.0.0/20"
      Ipv6Native: false
      Tags: []
  EC2RouteN0:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId:
        Ref: "EC2RouteTable"
      DestinationCidrBlock:
        Fn::GetAtt:
        - "EC2VPC"
        - "CidrBlock"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2SecurityGroup:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "default VPC security group"
      GroupName: "default"
      VpcId:
        Ref: "EC2VPC"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 8080
        ToPort: 8080
      - IpProtocol: "-1"
        FromPort: -1
        SourceSecurityGroupId:
          Fn::GetAtt:
          - "EC2VPC"
          - "DefaultSecurityGroup"
        ToPort: -1
        SourceSecurityGroupOwnerId: "077369590526"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2NetworkInterfaceG4:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: "ELB app/school-lbr/8dfc0dd6d7560ac7"
      PrivateIpAddress: "172.31.6.177"
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-073b3304ec2cf36be"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2Subnet"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
      PublicIpDnsNameOptions:
        DnsHostnameType: "public-ipv4-dns-name"
        PublicIpv4DnsName: "ec2-3-14-110-105.us-east-2.compute.amazonaws.com"
  EC2NetworkInterfaceAttachmentSy:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterfaceAttachment"
    DeletionPolicy: "Retain"
    Properties:
      NetworkInterfaceId: "eni-08910a5ac547e40fc"
      DeviceIndex: "1"
      DeleteOnTermination: false
  IAMRoleAWSServiceRoleForResourceExplorer:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Retain"
    Properties:
      Path: "/aws-service-role/resource-explorer-2.amazonaws.com/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/aws-service-role/AWSResourceExplorerServiceRolePolicy"
      MaxSessionDuration: 3600
      RoleName: "AWSServiceRoleForResourceExplorer"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "resource-explorer-2.amazonaws.com"
  IAMRoleAWSServiceRoleForECS:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Retain"
    Properties:
      Path: "/aws-service-role/ecs.amazonaws.com/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/aws-service-role/AmazonECSServiceRolePolicy"
      MaxSessionDuration: 3600
      RoleName: "AWSServiceRoleForECS"
      Description: "Policy to enable Amazon ECS to manage your EC2 instances and related\
        \ resources."
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "ecs.amazonaws.com"
  ResourceExplorer2IndexIndex75558bb1b8db4788965ab05b4bceb2c5:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ResourceExplorer2::Index"
    DeletionPolicy: "Retain"
    Properties:
      Type: "LOCAL"
      Tags: {}
  LogsLogStreamEcsschool953a010cdfab4b95a9ea9cc2b7c45762:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/953a010cdfab4b95a9ea9cc2b7c45762"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  LogsLogStreamEcsschoolba707c58b850426aab7a292a217b5b93:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/ba707c58b850426aab7a292a217b5b93"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  ElasticLoadBalancingV2TargetGroupTargetgroupschooltargetgroupfdf5acc27a3e26d3:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200"
      HealthCheckPath: "/"
      Port: 8080
      Targets:
      - AvailabilityZone: "us-east-2c"
        Port: 8080
        Id: "172.31.36.41"
      HealthCheckEnabled: true
      ProtocolVersion: "HTTP1"
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      Name: "schooltargetgroup"
      VpcId:
        Ref: "EC2VPC"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "lb_cookie"
        Key: "stickiness.type"
      - Value: "86400"
        Key: "stickiness.app_cookie.duration_seconds"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "86400"
        Key: "stickiness.lb_cookie.duration_seconds"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "slow_start.duration_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "off"
        Key: "load_balancing.algorithm.anomaly_mitigation"
      - Value: ""
        Key: "stickiness.app_cookie.cookie_name"
      - Value: "round_robin"
        Key: "load_balancing.algorithm.type"
      TargetType: "ip"
      HealthCheckPort: "8080"
      Protocol: "HTTP"
      Tags: []
  LogsLogStreamEcsschool22f433a597704aaf87b228157aa8664b:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/22f433a597704aaf87b228157aa8664b"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2SubnetNetworkAclAssociationWa:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId:
        Ref: "EC2NetworkAcl"
      SubnetId:
        Ref: "EC2SubnetK2"
  LogsLogGroupecscrudtask:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogGroup"
    DeletionPolicy: "Retain"
    Properties:
      FieldIndexPolicies: []
      LogGroupClass: "STANDARD"
      LogGroupName: "/ecs/crud-task"
      DataProtectionPolicy: {}
  ECSTaskDefinitionTaskdefinitioncrudtask5:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ECS::TaskDefinition"
    DeletionPolicy: "Retain"
    Properties:
      InferenceAccelerators: []
      Memory: "3072"
      PlacementConstraints: []
      Cpu: "1024"
      RequiresCompatibilities:
      - "FARGATE"
      NetworkMode: "awsvpc"
      EnableFaultInjection: false
      ExecutionRoleArn:
        Fn::GetAtt:
        - "IAMRoleEcsTaskExecutionRole"
        - "Arn"
      RuntimePlatform:
        OperatingSystemFamily: "LINUX"
        CpuArchitecture: "X86_64"
      Volumes: []
      ContainerDefinitions:
      - ExtraHosts: []
        Secrets: []
        VolumesFrom: []
        Cpu: 0
        EntryPoint: []
        DnsServers: []
        Image: "077369590526.dkr.ecr.us-east-2.amazonaws.com/rshankark/myfirstrepo@sha256:e23224d3fa800fbfbe5a77218effd4a03d6b866830f62d0a9550e6a587604d23"
        Essential: true
        LogConfiguration:
          SecretOptions: []
          Options:
            awslogs-group: "/ecs/crud-task"
            awslogs-create-group: "true"
            awslogs-region: "us-east-2"
            awslogs-stream-prefix: "ecs"
          LogDriver: "awslogs"
        ResourceRequirements: []
        EnvironmentFiles: []
        Name: "school"
        MountPoints: []
        DependsOn: []
        DockerLabels: {}
        PortMappings:
        - ContainerPort: 8080
          AppProtocol: "http"
          Protocol: "tcp"
          HostPort: 8080
          Name: "school-8080-tcp"
        DockerSecurityOptions: []
        SystemControls: []
        Command: []
        DnsSearchDomains: []
        Environment: []
        Links: []
        CredentialSpecs: []
        Ulimits: []
      Family: "crud-task"
      Tags: []
  EC2NetworkInterfaceAttachmentJs:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterfaceAttachment"
    DeletionPolicy: "Retain"
    Properties:
      NetworkInterfaceId: "eni-048b8f031ce6ee8d4"
      DeviceIndex: "1"
      DeleteOnTermination: false
  LogsLogStreamEcsschool3ef13fdd122d4359a7b9b91e841c9641:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/3ef13fdd122d4359a7b9b91e841c9641"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  LogsLogStreamEcsschooldf1a78fee8b44e0fb66ce68315bbe609:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/df1a78fee8b44e0fb66ce68315bbe609"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  LogsLogStreamEcsschool294b380a1cd24aa4863519acf2560d78:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Logs::LogStream"
    DeletionPolicy: "Retain"
    Properties:
      LogStreamName: "ecs/school/294b380a1cd24aa4863519acf2560d78"
      LogGroupName:
        Ref: "LogsLogGroupecscrudtask"
  EC2NetworkInterfaceMd:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      Description: "ELB app/school-lbr/8dfc0dd6d7560ac7"
      PrivateIpAddress: "172.31.45.31"
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-073b3304ec2cf36be"
      Ipv6Prefixes: []
      SubnetId:
        Ref: "EC2SubnetSS"
      SourceDestCheck: true
      InterfaceType: "interface"
      Tags: []
      PublicIpDnsNameOptions:
        DnsHostnameType: "public-ipv4-dns-name"
        PublicIpv4DnsName: "ec2-3-135-73-43.us-east-2.compute.amazonaws.com"
  EC2VPC:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPC"
    DeletionPolicy: "Retain"
    Properties:
      CidrBlock: "172.31.0.0/16"
      EnableDnsSupport: true
      InstanceTenancy: "default"
      EnableDnsHostnames: true
      Tags: []
  EC2RouteTable:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId:
        Ref: "EC2VPC"
  ResourceExplorer2ViewViewuseast2a46245c225084a30b63269a1631210b8:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ResourceExplorer2::View"
    DeletionPolicy: "Retain"
    Properties:
      IncludedProperties:
      - Name: "tags"
      Filters:
        FilterString: ""
      Scope: "arn:aws:iam::077369590526:root"
      Tags: {}
      ViewName: "us-east-2"
  IAMRoleAWSServiceRoleForSupport:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::IAM::Role"
    DeletionPolicy: "Retain"
    Properties:
      Path: "/aws-service-role/support.amazonaws.com/"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/aws-service-role/AWSSupportServiceRolePolicy"
      MaxSessionDuration: 3600
      RoleName: "AWSServiceRoleForSupport"
      Description: "Enables resource access for AWS to provide billing, administrative\
        \ and support services"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action: "sts:AssumeRole"
          Effect: "Allow"
          Principal:
            Service: "support.amazonaws.com"
